Left alignment fix

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -235,6 +235,7 @@ body {
 }
 
 footer {
+	padding-left: 10%;
 	padding-top: em(50);
 	a {
 		color: inherit;
